--- a/src/app/components/education/education.component.css
+++ b/src/app/components/education/education.component.css
@@ -107,6 +107,10 @@
         padding-top: 45px;
     }
 
+    .titleEducation {
+        height: 30px;
+    }
+
     .titleEducation h3 {
         font-size: 4vw;
     }
