--- a/src/app/components/carousel-education/new-edu.component.css
+++ b/src/app/components/carousel-education/new-edu.component.css
@@ -66,7 +66,9 @@
 .newEdu-box button {
     position: relative;
     display: inline-block;
-    padding: 15px 25px;
+    transform: translateX(-50%);
+    left: 50%;
+    padding: 15px 20px;
     color: var(--celeste);
     background: transparent;
     font-size: 20px;
@@ -169,4 +171,32 @@
       bottom: 100%;
     }
 }
+
+/* Default screen size (1440-1024) */
+
+@media all and (min-width: 1024px) and (max-width: 1440px) {
+    
+    
+}
+
+/* Landscape tablet size (1024-768) */
+
+@media all and (min-width: 768px) and (max-width: 1024px)  {
+
+   
+}
+
+ /* Tablet size (768-480) */
+
+ @media all and (min-width: 480px) and (max-width: 768px) { 
+
+    
+ }
+  
+ /* Phone size (480-menos ) */
+
+ @media all and (max-width: 480px) { 
+
+    
+ }
   
