--- a/src/app/components/carousel-education/new-edu.component.html
+++ b/src/app/components/carousel-education/new-edu.component.html
@@ -5,7 +5,7 @@
         Tu navegador no es compatible con videos HTML5
       </video>
     <div class="newEdu-box">
-        <h2>Nueva Educación</h2>
+        <h2>Agregar Educación</h2>
         <form (ngSubmit)="onCreate()" novalidate #f="ngForm" autocomplete="off">
             <div class="newEduInput-box">
                 <input type="text" id="tituloEdu" name="tituloEdu" [(ngModel)]="tituloEdu" required>
@@ -24,7 +24,7 @@
                 <span></span>
                 <span></span>
                 <span></span>
-                Agregar
+                Guardar
               </button>
         </form>
       </div>
