--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -105,4 +105,13 @@
     .footerMore {
         width: 150px;
     }
+
+    .content {
+        font-size: 8px;
+    }
+
+    .footerLink img {
+        width: 12px;
+        padding: 2.3vw;
+    }
 }
