--- a/src/app/components/gallery-works/new-work.component.html
+++ b/src/app/components/gallery-works/new-work.component.html
@@ -5,7 +5,7 @@
         Tu navegador no es compatible con videos HTML5
       </video>
     <div class="newExp-box">
-        <h2>Nueva Experiencia</h2>
+        <h2>Agregar Experiencia</h2>
         <form (ngSubmit)="onCreate()" novalidate #f="ngForm" autocomplete="off">
             <div class="newExpInput-box">
                 <input type="text" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
@@ -32,7 +32,7 @@
                 <span></span>
                 <span></span>
                 <span></span>
-                Agregar
+                Guardar
               </button>
         </form>
       </div>
