--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -1,3 +1,4 @@
+
 <app-header></app-header>
 
 <!-- Portada -->
@@ -27,3 +28,8 @@
 <!-- Footer -->
 
 <app-footer></app-footer>
+<div style="overflow: hidden; height: 0; ">
+    <app-generate-pdf></app-generate-pdf>
+</div>
+
+
