--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -1,6 +1,6 @@
 .skills {
     background: var(--grisOscuro);
-    padding: 20px 0 80px 0;
+    padding: 20px 0 10px 0;
     -webkit-box-shadow: 0px 4px 65px 10px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 4px 65px 10px rgba(0,0,0,0.75);
     box-shadow: 0px 4px 65px 10px rgba(0,0,0,0.75);
@@ -8,6 +8,7 @@
 
 .titleSkills {
     width: 70%;
+    height: 250px;
     margin: auto;
     padding-top: 50px;
 }
@@ -32,7 +33,7 @@
 
 .titleSkills h3::before {
     content: '';
-    width: 11.8vw;
+    width: 11.6vw;
     height: .9vw;
     position: absolute;
     bottom: 2px;
@@ -63,6 +64,10 @@
         bottom: 1px;
         left: 0;
     }
+
+    .titleSkills {
+        height: 160px;
+    }
 }
 
 /* Landscape tablet size (1024-768) */
@@ -78,6 +83,10 @@
         bottom: 1px;
         left: 1px;
     }
+
+    .titleSkills {
+        height: 80px;
+    }
 }
 
  /* Tablet size (768-480) */
@@ -92,6 +101,7 @@
 
     .titleSkills {
         padding-top: 40px;
+        height: 30px;
     }
  }
   
@@ -117,5 +127,6 @@
 
     .titleSkills {
         padding-top: 20px;
+        height: 70px;
     }
  }
