--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,7 +1,7 @@
 <section class="skills">
     <div class="titleSkills">
         <h2>Skills</h2>
-        <h3>Habilidades principales</h3>
+        <h3>Habilidades destacadas</h3>
     </div>
     <app-percentages-skills></app-percentages-skills>
 </section>
