--- a/src/app/components/start-session/start-session.component.css
+++ b/src/app/components/start-session/start-session.component.css
@@ -66,7 +66,9 @@
 .login-box button {
     position: relative;
     display: inline-block;
-    padding: 15px 25px;
+    transform: translateX(-50%);
+    left: 50%;
+    padding: 15px 20px;
     color: var(--celeste);
     background: transparent;
     font-size: 20px;
@@ -75,7 +77,7 @@
     overflow: hidden;
     transition: .5s;
     margin-top: 40px;
-    letter-spacing: 4px;
+    letter-spacing: 3px;
     border: none;
     cursor: pointer;
 }
@@ -182,4 +184,66 @@
       bottom: 100%;
     }
 }
+
+/* Default screen size (1440-1024) */
+
+@media all and (min-width: 1024px) and (max-width: 1440px) {
+    
+    .login-box h2 {
+        font-size: 34px;
+    }
+}
+
+/* Landscape tablet size (1024-768) */
+
+@media all and (min-width: 768px) and (max-width: 1024px)  {
+
+    .login-box h2 {
+        font-size: 32px;
+    }
+}
+
+ /* Tablet size (768-480) */
+
+ @media all and (min-width: 480px) and (max-width: 768px) { 
+    
+    .login-box h2 {
+        font-size: 30px;
+    }
+ }
+  
+ /* Phone size (480-menos ) */
+
+ @media all and (max-width: 480px) { 
+
+    .login-box {
+        width: 300px;
+        padding: 40px;
+    }
+
+    .login-box h2 {
+        font-size: 26px;
+    }
+
+    .login-box .user-box input {
+        font-size: 18px;
+    }
+    .login-box .user-box label {
+        font-size: 18px;
+    }
+
+    .login-box button {
+        font-size: 16px;
+        margin-top: 20px;
+    }
+
+    .signUpText {
+        font-size: 12px;
+        padding-top: 30px;
+    }
+    
+    .signUpText a {
+        font-size: 12px;
+    }
+ }
   
