--- a/src/app/components/info-about/edit-info.component.html
+++ b/src/app/components/info-about/edit-info.component.html
@@ -26,7 +26,11 @@
             <div class="editInfoInput-box">
                 <input type="text" id="fotoPerfil" name="fotoPerfil" [(ngModel)]="person.fotoPerfil" required>
                 <label for="fotoPerfil">URL de la imagen</label>
-            </div>  
+            </div>
+            <div class="editInfoInput-box">
+                <input type="text" id="numTel" name="numTel" [(ngModel)]="person.numTel" required>
+                <label for="numTel">Número de teléfono</label>
+            </div>   
             <button type="submit">
                 <span></span>
                 <span></span>
