--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -73,11 +73,25 @@
     transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
     font-weight: 600;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+}
+
+.footerMore img {
+    width: 15px;
+    padding-right: 8px;
+    padding-bottom: 1px;
+    cursor: pointer;
 }
 
 .footerMore a:hover {
     color: #000;
     box-shadow: inset 200px 0 0 0 whitesmoke;
+}
+
+.footerMore a:hover img {
+    filter: invert(1);
 }
 
 @keyframes bubble-size {
