--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
-    <a href="https://argentinaprograma.inti.gob.ar/"><img src="../../../assets/img/APLogo.png" alt="Logo Argentina Programa" class="apLogo"></a>
+    <a href="https://argentinaprograma.inti.gob.ar/" target="_blank"><img src="../../../assets/img/APLogo.png" alt="Logo Argentina Programa" class="apLogo"></a>
     <div>
-        <a href="https://www.linkedin.com/in/florencia-collosso/"><img src="../../../assets/icons/linkedin-in.svg" alt="Link to Linkedin" class="fa linkedin" target="_blank" rel="noopener noreferrer"></a>
-        <a href="https://www.instagram.com/kllosso/"><img src="../../../assets/icons/instagram.svg" alt="Link to Instagram" class="fa instagram" target="_blank" rel="noopener noreferrer"></a>
+        <a href="https://www.linkedin.com/in/florencia-collosso/" target="_blank"><img src="../../../assets/icons/linkedin-in.svg" alt="Link to Linkedin" class="fa linkedin" rel="noopener noreferrer"></a>
+        <a href="https://github.com/FlorCollosso" target="_blank"><img src="../../../assets/icons/github.svg" alt="Link to Instagram" class="fa instagram" rel="noopener noreferrer"></a>
         <button (click)="login()" *ngIf="!isLoggedIn">Login</button>
         <button (click)="onLogout()" *ngIf="isLoggedIn">Logout</button>
     </div>
