--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -30,7 +30,7 @@
       <div class="content">
         <div class="footerMore">
             <div>© 2022 Florencia Collosso</div>
-            <div><a href="https://api.whatsapp.com/send?phone={{person.numTel}}&text=Hola%20{{person.nombre}},%20vi%20tu%20portfolio%20y%20me%20interes%C3%B3." target="_blank"><img src="../../../assets/icons/whatsapp.svg" alt="whatsapp"> Contact me</a></div>
+            <div><a href="https://api.whatsapp.com/send?phone={{person.numTel}}&text=Hola%20{{person.nombre}},%20vi%20tu%20portfolio%20y%20me%20interes%C3%B3." target="_blank">Contact me</a></div>
         </div>
         <div class="footerLink">
             <div><a href="https://github.com/FlorCollosso" target="_blank"><img src="../../../assets/icons/github.svg" alt="Link to Instagram" class="fa instagram" rel="noopener noreferrer"></a></div>
