--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,7 +1,7 @@
 <section class="education">
     <div class="educationCover">
         <div class="titleEducation">
-            <span>Cursos y Careras</span>
+            <span>Cursos y Carreras</span>
             <h3>Trayectoria de aprendizajes</h3>
         </div>
         <app-carousel-education></app-carousel-education>
