--- a/src/app/components/gallery-works/edit-work.component.html
+++ b/src/app/components/gallery-works/edit-work.component.html
@@ -5,6 +5,7 @@
         Tu navegador no es compatible con videos HTML5
       </video>
     <div class="editExp-box">
+        <a class="goBack" href="#">←</a>
         <h2>Nueva Experiencia</h2>
         <form (ngSubmit)="onUpdate()" novalidate #f="ngForm" autocomplete="off">
             <div class="editExpInput-box">
