--- a/src/app/components/percentages-skills/new-skill.component.html
+++ b/src/app/components/percentages-skills/new-skill.component.html
@@ -5,6 +5,7 @@
         Tu navegador no es compatible con videos HTML5
       </video>
     <div class="newSkill-box">
+      <a class="goBack" href="#">←</a>
         <h2>Agregar Skill</h2>
         <form (ngSubmit)="onCreate()" novalidate #f="ngForm" autocomplete="off">
             <div class="newSkillInput-box">
