--- a/src/app/components/carousel-education/carousel-education.component.css
+++ b/src/app/components/carousel-education/carousel-education.component.css
@@ -1,6 +1,11 @@
 @import "swiper/swiper.min.css";
 @import "swiper/modules/navigation/navigation.min.css";
 
+section {
+    display: flex;
+    flex-direction: column;
+}
+
 .buttonAdd {
     cursor: pointer;
     width: 40px;
@@ -8,8 +13,7 @@
     border: none;
     background: transparent;
     position: absolute;
-    right: 170px;
-    margin-top: 20px;
+    right: 6vw;
     z-index: 2;
 }
 
@@ -106,19 +110,30 @@
     letter-spacing: 1px; 
 }
 
-.swiper-button-next {
+.swiperEducation .swiper-button-prev,
+.swiperEducation .swiper-button-next {
+    transform: scale(.8);
     color: #fff !important;
-    position: absolute;
-    top: 100px;
-    margin-right: 50px;
+    position: absolute !important;
+    top: 40% !important;
+}
+
+.swiper-button-next {
+    display: none;
+}
+  
+.swiper:hover .swiper-button-next {
+    display: block;
 }
 
 .swiper-button-prev {
-    color: #fff !important;
-    position: absolute;
-    top: 100px;
-    margin-left: 50px;
+    display: none;
 }
+  
+.swiper:hover .swiper-button-prev {
+    display: block;
+}
+
 
 /* Default screen size (1440-1024) */
 
@@ -169,7 +184,7 @@
 
     .swiperEducation {
         margin-top: 100px;
-        --diameter: 150px;
+        --diameter: 140px;
     }
 
     .swiperSlideEducation{
@@ -177,31 +192,29 @@
     }
 
     .swiperSlideEducation h4 {
-        font-size: 20px;
+        font-size: 18px;
         margin: 8px 20px;
     }
     
     .swiperSlideEducation h5 {
-        font-size: 14px; 
+        font-size: 12px; 
     }
 
     .swiper-button-next {
         margin-right: 10px;
-        top: 40% !important;
     }
 
     .swiper-button-next:after {
-        font-size: 40px !important;
+        font-size: 30px !important;
 
     }
     
     .swiper-button-prev {
         margin-left: 10px;
-        top: 40% !important;
     }
 
     .swiper-button-prev:after {
-        font-size: 40px !important;
+        font-size: 30px !important;
 
     }
 }
@@ -211,8 +224,8 @@
  @media all and (min-width: 480px) and (max-width: 768px) { 
 
     .swiperEducation {
-        margin-top: 100px;
-        --diameter: 150px;
+        margin-top: 70px;
+        --diameter: 120px;
     }
 
     .swiperSlideEducation{
@@ -220,33 +233,34 @@
     }
 
     .swiperSlideEducation h4 {
-        font-size: 20px;
+        font-size: 16px;
         margin: 8px 20px;
     }
     
     .swiperSlideEducation h5 {
-        font-size: 14px; 
+        font-size: 10px; 
     }
 
     .swiper-button-next {
         margin-right: 10px;
-        top: 40% !important;
     }
 
     .swiper-button-next:after {
-        font-size: 40px !important;
+        font-size: 30px !important;
 
     }
     
     .swiper-button-prev {
         margin-left: 10px;
-        top: 40% !important;
     }
 
     .swiper-button-prev:after {
-        font-size: 40px !important;
+        font-size: 30px !important;
 
     }
+
+    
+
  }
   
  /* Phone size (480-menos ) */
@@ -271,21 +285,19 @@
         font-size: 8px; 
     }
 
-    .swiper-button-next {
-        margin-right: 0;
-        top: 45% !important;
-    }
+    .swiperEducation .swiper-button-prev,
+    .swiperEducation .swiper-button-next {
+        transform: scale(.8);
+        color: #fff !important;
+        position: absolute !important;
+        top: 50% !important;
+}
 
     .swiper-button-next:after {
         font-size: 25px !important;
 
     }
     
-    .swiper-button-prev {
-        margin-left: 0;
-        top: 45% !important;
-    }
-
     .swiper-button-prev:after {
         font-size: 25px !important;
 
@@ -294,7 +306,6 @@
     .buttonAdd {
         width: 40px;
         height: 40px;
-        right: 170px;
         margin-top: 0;
         z-index: 2;
     }
