--- a/src/app/components/carousel-education/carousel-education.component.html
+++ b/src/app/components/carousel-education/carousel-education.component.html
@@ -1,38 +1,40 @@
-<button class="buttonAdd" type="button" routerLink="/nuevaedu" *ngIf="isLoggedIn"><img src="../../../assets/icons/plus-solid.svg" alt="Botón agregar"></button>
-<swiper 
-[navigation]="true"
-class="swiperEducation"
-[slidesPerView]="2"
-[breakpoints]="{
-    '1440': {
-        slidesPerView: 3,
-        spaceBetween: -175
-    },
-    '1024': {
-        slidesPerView: 3,
-        spaceBetween: -105
-    },
-    '768': {
-        slidesPerView: 2,
-        spaceBetween: -130
-    },
-    '375': {
-        slidesPerView: 2,
-        spaceBetween: -45
-    }
-}"
->
-    <ng-template swiperSlide class="swiperSlideEducation" *ngFor="let Education of edu">
-        <div class="containerEdu">
-            <div class="cardEdu">
-                <img [src]="Education.imgEdu">
-                <h4>{{Education.tituloEdu}}</h4>
-                <h5>{{Education.fechaEdu}}</h5>
+<section>
+    <button class="buttonAdd" type="button" routerLink="/nuevaedu" *ngIf="isLoggedIn"><img src="../../../assets/icons/plus-solid.svg" alt="Botón agregar"></button>
+    <swiper 
+    [navigation]="true"
+    class="swiperEducation"
+    [slidesPerView]="2"
+    [breakpoints]="{
+        '1440': {
+            slidesPerView: 3,
+            spaceBetween: -175
+        },
+        '1024': {
+            slidesPerView: 3,
+            spaceBetween: -70
+        },
+        '768': {
+            slidesPerView: 3,
+            spaceBetween: -10
+        },
+        '375': {
+            slidesPerView: 2,
+            spaceBetween: -10
+        }
+    }"
+    >
+        <ng-template swiperSlide class="swiperSlideEducation" *ngFor="let Education of edu">
+            <div class="containerEdu">
+                <div class="cardEdu">
+                    <img [src]="Education.imgEdu">
+                    <h4>{{Education.tituloEdu}}</h4>
+                    <h5>{{Education.fechaEdu}}</h5>
+                </div>
+                <div class="eduButtons" *ngIf="isLoggedIn">
+                    <button class="buttonEdit"><img src="../../../assets/icons/pen-solid.svg" alt="Botón editar" routerLink="/editedu/{{Education.id}}"></button> 
+                    <button class="buttonDelete"><img src="../../../assets/icons/trash-solid.svg" alt="Botón borrar" (click)="delete(Education.id)"></button> 
+                </div>
             </div>
-            <div class="eduButtons" *ngIf="isLoggedIn">
-                <button class="buttonEdit"><img src="../../../assets/icons/pen-solid.svg" alt="Botón editar" routerLink="/editedu/{{Education.id}}"></button> 
-                <button class="buttonDelete"><img src="../../../assets/icons/trash-solid.svg" alt="Botón borrar" (click)="delete(Education.id)"></button> 
-            </div>
-        </div>
-    </ng-template>
-</swiper>
+        </ng-template>
+    </swiper>
+</section>
