--- a/src/app/components/carousel-education/new-edu.component.css
+++ b/src/app/components/carousel-education/new-edu.component.css
@@ -35,7 +35,7 @@
 
 .newEdu-box .newEduInput-box input {
     width: 100%;
-    padding: 10px 0;
+    padding: 15px 0 10px 0;
     font-size: 22px;
     color: #fff;
     margin-bottom: 30px;
