--- a/src/app/components/carousel-education/new-edu.component.html
+++ b/src/app/components/carousel-education/new-edu.component.html
@@ -5,6 +5,7 @@
         Tu navegador no es compatible con videos HTML5
       </video>
     <div class="newEdu-box">
+      <a class="goBack" href="#">←</a>
         <h2>Agregar Educación</h2>
         <form (ngSubmit)="onCreate()" novalidate #f="ngForm" autocomplete="off">
             <div class="newEduInput-box">
