--- a/src/app/components/carousel-projects/carousel-projects.component.css
+++ b/src/app/components/carousel-projects/carousel-projects.component.css
@@ -6,6 +6,7 @@ section {
     display: flex;
     flex-direction: column;
 }
+
 .buttonAdd {
     cursor: pointer;
     width: 40px;
@@ -13,7 +14,7 @@ section {
     border: none;
     background: transparent;
     position: absolute;
-    right: 170px;
+    right: 6vw;
     margin: 0;
     z-index: 2;
 }
@@ -106,7 +107,7 @@ section {
 }
 
 .swiperSlideProjects img {
-    width: 100%;
+    width: auto;
     height: 100%;
     transition: all 300ms;
 }
@@ -116,7 +117,7 @@ section {
 } 
 
 .swiperSlideProjects h4 {
-    font-size: 30px;
+    font-size: 28px;
     color: #fff;
     letter-spacing: 1px;
     text-align: left;
@@ -124,7 +125,7 @@ section {
 }
 
 .swiperSlideProjects h5 {
-    font-size: 22px;
+    font-size: 18px;
     color: darkgrey;
     font-weight: 400;
     font-style: italic;
@@ -133,7 +134,7 @@ section {
 }
 
 .swiperSlideProjects p {
-    font-size: 20px;
+    font-size: 16px;
     color: #fff;
     text-align: left;
     font-weight: 100;
@@ -179,7 +180,7 @@ section {
     }
 
     .cardInfo {
-        height: 240px;
+        height: 200px;
         margin-top: 20px;
         display: flex;
         flex-direction: column;
@@ -187,22 +188,22 @@ section {
     }
 
     .swiperSlideProjects h4 {
-        font-size: 28px;
+        font-size: 24px;
         margin-top: 0;
     }
     
     .swiperSlideProjects h5 {
-        font-size: 20px;
+        font-size: 16px;
         margin-top: 0;
     }
     
     .swiperSlideProjects p {
-        font-size: 18px;
+        font-size: 14px;
         margin-top: 0;
     }
     
     .swiperSlideProjects a {
-        font-size: 16px;
+        font-size: 12px;
         margin-top: 0;
     }
 }
@@ -228,6 +229,7 @@ section {
     }
 
     .cardInfo {
+        height: 180px;
         margin-top: 20px;
         display: flex;
         flex-direction: column;
@@ -235,22 +237,22 @@ section {
     }
 
     .swiperSlideProjects h4 {
-        font-size: 22px;
+        font-size: 20px;
         margin-top: 0;
     }
     
     .swiperSlideProjects h5 {
-        font-size: 16px;
-        margin-top: 0;
-    }
-    
-    .swiperSlideProjects p {
         font-size: 14px;
         margin-top: 0;
     }
     
-    .swiperSlideProjects a {
+    .swiperSlideProjects p {
         font-size: 12px;
+        margin-top: 0;
+    }
+    
+    .swiperSlideProjects a {
+        font-size: 10px;
         margin-top: 0;
     }
 
@@ -299,17 +301,17 @@ section {
     }
 
     .swiperSlideProjects h4 {
-        font-size: 19px;
+        font-size: 16px;
         margin-top: 0;
     }
     
     .swiperSlideProjects h5 {
-        font-size: 14px;
+        font-size: 10px;
         margin-top: 5px;
     }
     
     .swiperSlideProjects p {
-        font-size: 12px;
+        font-size: 8px;
         margin-top: 6px;
     }
     
