--- a/src/app/components/carousel-projects/new-pro.component.html
+++ b/src/app/components/carousel-projects/new-pro.component.html
@@ -5,6 +5,7 @@
         Tu navegador no es compatible con videos HTML5
       </video>
     <div class="newPro-box">
+        <a class="goBack" href="#">←</a>
         <h2>Agregar Proyecto</h2>
         <form (ngSubmit)="onCreate()" novalidate #f="ngForm" autocomplete="off">
             <div class="newProInput-box">
