--- a/src/app/components/gallery-works/edit-work.component.css
+++ b/src/app/components/gallery-works/edit-work.component.css
@@ -38,7 +38,7 @@
 
 .editExp-box .editExpInput-box input {
     width: 100%;
-    padding: 10px 0;
+    padding: 15px 0 10px 0;
     font-size: 22px;
     color: #fff;
     margin-bottom: 30px;
