--- a/src/app/components/gallery-works/new-work.component.html
+++ b/src/app/components/gallery-works/new-work.component.html
@@ -5,6 +5,7 @@
         Tu navegador no es compatible con videos HTML5
       </video>
     <div class="newExp-box">
+        <a class="goBack" href="#">←</a>
         <h2>Agregar Experiencia</h2>
         <form (ngSubmit)="onCreate()" novalidate #f="ngForm" autocomplete="off">
             <div class="newExpInput-box">
