--- a/src/app/components/percentages-skills/edit-skill.component.html
+++ b/src/app/components/percentages-skills/edit-skill.component.html
@@ -5,6 +5,7 @@
         Tu navegador no es compatible con videos HTML5
       </video>
     <div class="editSkill-box">
+      <a class="goBack" href="#">←</a>
         <h2>Editar Skill</h2>
         <form (ngSubmit)="onUpdate()" novalidate #f="ngForm" autocomplete="off">
             <div class="editSkillInput-box">
