--- a/src/app/components/percentages-skills/new-skill.component.css
+++ b/src/app/components/percentages-skills/new-skill.component.css
@@ -22,7 +22,7 @@
 }
 
 .newSkill-box h2 {
-    margin: 0 0 30px;
+    margin: 0 0 50px;
     padding: 0;
     color: #fff;
     text-align: center;
@@ -35,7 +35,7 @@
 
 .newSkill-box .newSkillInput-box input {
     width: 100%;
-    padding: 10px 0;
+    padding: 15px 0 10px 0;
     font-size: 22px;
     color: #fff;
     margin-bottom: 30px;
