--- a/src/app/components/percentages-skills/percentages-skills.component.css
+++ b/src/app/components/percentages-skills/percentages-skills.component.css
@@ -8,7 +8,7 @@
     border: none;
     background: transparent;
     position: absolute;
-    right: 170px;
+    right: 6vw;
     margin-top: 0;
     z-index: 2;
 }
@@ -57,7 +57,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 150px 200px 200px 200px;
+    padding: 8vw 10vw 10vw 10vw;
 }
 
 .skillCard {
@@ -75,25 +75,28 @@
     bottom: 60px;
 }
 
-.swiper-button-prev,
-.swiper-button-next {
+.containerSkills .swiper-button-prev,
+.containerSkills .swiper-button-next {
         transform: scale(.8);
+        color: #fff !important;
         top: 50% !important;
 }
 
 .swiper-button-next {
     display: none;
+    margin-right: 15px;
 }
   
-swiper:hover .swiper-button-next {
+.swiper:hover .swiper-button-next {
     display: block;
 }
 
 .swiper-button-prev {
     display: none;
+    margin-left: 15px;
 }
   
-swiper:hover .swiper-button-prev {
+.swiper:hover .swiper-button-prev {
     display: block;
 }
 
@@ -101,8 +104,12 @@ swiper:hover .swiper-button-prev {
 
 @media all and (min-width: 1024px) and (max-width: 1440px) {
 
+    .containerSkills {
+        padding: 10vw 10vw 13vw 10vw;
+    }
+
     .skillCard {
-        padding: 0 40px;
+        padding: 0 10px;
         text-align: center;
     }
 
@@ -122,9 +129,15 @@ swiper:hover .swiper-button-prev {
 /* Landscape tablet size (1024-768) */
 
 @media all and (min-width: 768px) and (max-width: 1024px)  {
+    
+    .containerSkills {
+        padding: 15vw 10vw 15vw 10vw;
+    }
+
 
     .skillCard {
-        padding: 0 30px;
+        padding: 0;
+        margin: 0 !important;
         text-align: center;
     }
 
@@ -140,15 +153,31 @@ swiper:hover .swiper-button-prev {
         transform: scale(.8);
         top: 50% !important;
     }
+
+    .skillButtons img{
+        height: 17px;
+        cursor: pointer;
+    }
+
+    .skillButtons button {
+        height: 35px;
+        width: 35px;
+        margin: 0 5px;
+    }
 }
 
  /* Tablet size (768-480) */
 
  @media all and (min-width: 480px) and (max-width: 768px) { 
 
+    .containerSkills {
+        padding: 22vw 10vw 22vw 10vw;
+    }
+
     .skillCard {
         padding: 0 20px;
         text-align: center;
+        margin: 12px !important;
     }
 
     .skillCard h4 {
@@ -161,27 +190,36 @@ swiper:hover .swiper-button-prev {
     .swiper-button-prev,
     .swiper-button-next {
         transform: scale(.8);
-        top: 50% !important;
+        top: 45% !important;
+    }
+
+    .skillButtons img{
+        height: 15px;
+        cursor: pointer;
+    }
+
+    .skillButtons button {
+        height: 32px;
+        width: 32px;
+        margin: 0 4px;
     }
  }
   
  /* Phone size (480-menos ) */
 
- @media all and (max-width: 480px) { 
+ @media all and (max-width: 480px) {
 
     .containerSkills {
         display: flex;
         position: relative;
         flex-wrap: wrap;
         width: 100%;
-        padding: 30px 0 150px 0;
+        padding: 15vw 10vw 35vw 10vw;
     }
 
     .skillCard {
         padding-top: 10px;
-        text-align: left;
-        width: 70%;
-        margin: auto;
+        margin: 1px !important;
     }
 
     .skillCard h4 {
@@ -193,13 +231,13 @@ swiper:hover .swiper-button-prev {
     }
 
     .skillButtons img{
-        height: 8px;
+        height: 9px;
         cursor: pointer;
     }
     
     .skillButtons button {
-        height: 15px;
-        width: 15px;
+        height: 14px;
+        width: 14px;
         margin: 0 3px;
     }
 
