--- a/src/app/components/start-session/start-session.component.html
+++ b/src/app/components/start-session/start-session.component.html
@@ -5,6 +5,7 @@
         Tu navegador no es compatible con videos HTML5
       </video>
     <div class="login-box">
+      <a class="goBack" href="#">←</a>
         <h2>Login</h2>
         <form #f="ngForm" (ngSubmit)="onLogin()" novalidate autocomplete="off">
           <div class="user-box">
