--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -1,7 +1,7 @@
 <section class="works">
     <div class="titleWorks">
         <h2>Works</h2>
-        <h3>Experiencia más relevante</h3>
+        <h3>Experiencia relevante</h3>
     </div>
    <app-gallery-works></app-gallery-works>
 </section>
